A few changes to some js files, and modal corrections

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,16 +11,13 @@
            <!-- <form method="POST" action="/addPlayer"> -->
   Name: <input id="nametext" name="name" required value={{playerName.name}}>
   <input type="hidden" name="_id" value="{{playerName._id}}">
-  <br><button  id="namebutton" value="submit">Submit</button>
-<!-- </form> -->
-
-          <!-- <p>fasfsdfasfsfsdfsdfsdsffsd</p> -->
-          <button id="button">Close</button>
+  <br><br><button  id="namebutton" value="submit">Submit</button>
       </div>
   </div>
 
 <canvas id = "canvas" style="border:1px solid #000"></canvas>
 <h1><time>00:00:00</time></h1>
+<span id="nameSpan"></span>
 
 <h3>Race to the Box!</h3>
 <p>Up, Down, Left, Right arrow keys move character.  Be the first to get there</p>
