Worked on the stopwatch

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,6 +18,11 @@
 <canvas id = "canvas" style="border:1px solid #000"></canvas>
 <h1><time>00:00:00</time></h1>
 <span id="nameSpan"></span>
+<span id="timer"></span>
+
+<button id="gameend">
+ Cick to end game
+</button>
 
 <h3>Race to the Box!</h3>
 <p>Up, Down, Left, Right arrow keys move character.  Be the first to get there</p>
