--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,23 @@ canvas {
   color: blue;
 }
 
+body {
+  background-color: powderblue;
+}
+
+#fastesttTimes {
+  background-color: navy;
+border: none;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
+border-radius: 8px;
+}
 
 #modal {
     position: fixed;
@@ -34,4 +51,31 @@ canvas {
     background: #fff;
     width: 80%;
     padding: 20px;
+}
+
+#timer {
+  font-size: 200%;
+  font-weight: bold;
+  color: blue;
+}
+
+#nameSpan {
+  font-size: 200%;
+  font-weight: bold;
+  display: inline;
+}
+
+#instructions {
+  font-size: 150%;
+  font-weight: bold;
+}
+
+#gameWinner {
+  font-size: 200%;
+  font-weight: bold;
+  display: inline;
+}
+
+#container {
+  overflow: hidden;
 }
